--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -970,6 +970,7 @@ i {
     width: 100%;
     position: relative;
     height: 100%;
+    background-attachment: fixed;
 }
 
 .parallax .parallax-image.second-image {
@@ -1317,12 +1318,14 @@ i {
     z-index: 1;
     width: 100%;
     height: 100%;
+    background-attachment: fixed;
 }
 
 .landing-page .parallax .parallax-background img {
     width: 100%;
     height: auto;
     position: relative;
+    background-attachment: fixed;
 }
 
 .landing-page .parallax .parallax-image {
@@ -1799,7 +1802,7 @@ i {
 }
 
 .fixed-plugin .adjustments-line p {
-    float: left;
+    float: none;
     display: inline-block;
     margin-bottom: 0;
     font-size: 1em;
@@ -2026,6 +2029,7 @@ i {
     .landing-page .parallax .parallax-background img {
         width: auto;
         height: 100%;
+        background-attachment: fixed;
     }
     .landing-page .parallax .description {
         margin-top: 65px;
